Small Fixes on iOS

--- a/src/app/styles/_3shared.scss
+++ b/src/app/styles/_3shared.scss
@@ -148,3 +148,6 @@ $header-height:60px;
         padding-top:90px;
     }
 }
+.platform-ios .group-page .progressiveBar{
+    top: 87px;
+}
